force-app/main/default/objects/Order__c/fields/ASM_Code__c.field-meta.xml
<CustomField>
    <fullName>ASM_Code__c</fullName>
    <formula>Ordered_By__r.L1_Approver__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager 1 Code</label>
    <type>Text</type>
</CustomField>