force-app/main/default/objects/Order__c/fields/Beat_ID__c.field-meta.xml
<CustomField>
    <fullName>Beat_ID__c</fullName>
    <formula>if(
    Visit_Task__c != NULL ,
    Visit_Task__r.Beat__r.Employee_Code__c ,
    &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat ID</label>
    <type>Text</type>
</CustomField>