force-app/main/default/objects/Order__c/fields/Beat_Name__c.field-meta.xml
<CustomField>
    <fullName>Beat_Name__c</fullName>
    <formula>if(
    Visit_Task__c != NULL ,
    Visit_Task__r.Beat__r.Name,
    Account__r.Beats_Name__r.Name

  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Name</label>
    <type>Text</type>
</CustomField>