force-app/main/default/objects/Order__c/fields/Company_Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Company_Authorized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Authorized By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>