force-app/main/default/objects/Order__c/fields/Company_Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Authorized_Date__c</fullName>
    <label>Company Authorized Date</label>
    <type>Date</type>
</CustomField>