force-app/main/default/objects/Order__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <label>Customer Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>