force-app/main/default/objects/Order__c/fields/Customer_Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Customer_Authorized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Authorized By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>