force-app/main/default/objects/Order__c/fields/Customer_Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Authorized_Date__c</fullName>
    <label>Customer Authorized Date</label>
    <type>Date</type>
</CustomField>