force-app/main/default/objects/Order__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Order End Date</label>
    <type>Date</type>
</CustomField>