force-app/main/default/objects/Order__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Stores the file name from with the order was created</description>
    <inlineHelpText>Stores the file name from with the order was created</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>