force-app/main/default/objects/Order__c/fields/GRN_Status__c.field-meta.xml
<CustomField>
    <fullName>GRN_Status__c</fullName>
    <label>GRN Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Partially GRN</fullName>
            </value>
            <value>
                <fullName>Fully GRN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>