force-app/main/default/objects/Order__c/fields/Invoice_Created__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Created__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Created</fullName>
            </value>
            <value>
                <fullName>Invoice Not Created</fullName>
                <default>true</default>
                <label>Invoice Not Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>