force-app/main/default/objects/Order__c/fields/Line_Item_Volume__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Volume__c</fullName>
    <label>Line Item Volume</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>