force-app/main/default/objects/Order__c/fields/Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Order_Name__c</fullName>
    <formula>IF( RecordType.DeveloperName ==&apos;Primary_Order&apos; || RecordType.DeveloperName ==&apos;Primary_Order_delivered&apos; , &apos;P&apos;+ Name ,  IF(RecordType.DeveloperName ==&apos;Secondary_Order&apos;, &apos;S&apos;+ Name, Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Name</label>
    <type>Text</type>
</CustomField>