force-app/main/default/objects/Order__c/fields/Placed_via_Under_SS__c.field-meta.xml
<CustomField>
    <fullName>Placed_via_Under_SS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placed via Under SS</label>
    <type>Checkbox</type>
</CustomField>