force-app/main/default/objects/Order__c/fields/Price_Excluding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Price_Excluding_Tax__c</fullName>
    <label>Price (Excluding Tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>