force-app/main/default/objects/Order__c/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <description>Counter Order price type (MRP or Dealer Price). Set directly by CounterInvoiceController.createCounterOrder() so it is available as a real, reportable field instead of being parsed out of Description__c.</description>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRP</fullName>
                <default>true</default>
                <label>MRP</label>
            </value>
            <value>
                <fullName>Dealer Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>