force-app/main/default/objects/Order__c/fields/Primary_Order_Under_SS__c.field-meta.xml
<CustomField>
    <fullName>Primary_Order_Under_SS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Order Under SS</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Primary order Under SS</relationshipLabel>
    <relationshipName>Primary_order_under_SS</relationshipName>
    <type>Lookup</type>
</CustomField>