force-app/main/default/objects/Order__c/fields/Ref_Order_No_Data_Upload__c.field-meta.xml
<CustomField>
    <fullName>Ref_Order_No_Data_Upload__c</fullName>
    <description>Stores the Ref Order No received from the uploaded Excel file and is used for tracking and grouping.</description>
    <label>Ref Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>