force-app/main/default/objects/Order__c/fields/Retailer_Address__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Address__c</fullName>
    <formula>if(
   Account__c != NULL , 
   Account__r.Shipping_Address_text__c,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Address</label>
    <type>Text</type>
</CustomField>