force-app/main/default/objects/Order__c/fields/Retailer_City__c.field-meta.xml
<CustomField>
    <fullName>Retailer_City__c</fullName>
    <formula>if(
   Account__c != NULL , 
   Account__r.Primary_City__c ,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer City</label>
    <type>Text</type>
</CustomField>