force-app/main/default/objects/Order__c/fields/Retailer_Code__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Code__c</fullName>
    <formula>Account__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Code</label>
    <type>Text</type>
</CustomField>