force-app/main/default/objects/Order__c/fields/Retailer_Lat__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Lat__c</fullName>
    <formula>if(
   Account__c != NULL , 
   Account__r.Latitude__c,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Lat</label>
    <type>Text</type>
</CustomField>