force-app/main/default/objects/Order__c/fields/Retailer_Long__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Long__c</fullName>
    <formula>if(
   Account__c != NULL , 
   Account__r.Longitude__c,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Long</label>
    <type>Text</type>
</CustomField>