force-app/main/default/objects/Order__c/fields/Retailer_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Mobile__c</fullName>
    <formula>if(
   Account__c != NULL , 
   Account__r.Owners_Number__c ,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Mobile</label>
    <type>Text</type>
</CustomField>