force-app/main/default/objects/Order__c/fields/Retailer_State__c.field-meta.xml
<CustomField>
    <fullName>Retailer_State__c</fullName>
    <formula>if(
   Account__c != NULL , 
   Account__r.Primary_State__c,
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer State</label>
    <type>Text</type>
</CustomField>