force-app/main/default/objects/Order__c/fields/Retailer_Status__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Status__c</fullName>
    <formula>if(
   Account__c != NULL &amp;&amp; Account__r.Is_Active__c, 
   &quot;Active&quot;, 
   &quot;Inactive&quot;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Status</label>
    <type>Text</type>
</CustomField>