force-app/main/default/objects/Order__c/fields/Retailer_Type__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Type__c</fullName>
    <formula>if(
   Account__c != NULL , 
   TEXT(Account__r.Outlets_Type__c),
   &apos;&apos;
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retailer Type</label>
    <type>Text</type>
</CustomField>