force-app/main/default/objects/Order__c/fields/RSM_Name__c.field-meta.xml
<CustomField>
    <fullName>RSM_Name__c</fullName>
    <formula>Ordered_By__r.L1_Approver__r.L1_Approver__r.FirstName + &apos; &apos; + Ordered_By__r.L1_Approver__r.L1_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager 2</label>
    <type>Text</type>
</CustomField>