force-app/main/default/objects/Order__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <description>Counter Order sale type (e.g. Cash Sales, Event). Set directly by CounterInvoiceController.createCounterOrder() so it is available as a real, reportable field instead of being parsed out of Description__c.</description>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Sales</fullName>
                <default>true</default>
                <label>Cash Sales</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>