force-app/main/default/objects/Order__c/fields/Salesman_Code__c.field-meta.xml
<CustomField>
    <fullName>Salesman_Code__c</fullName>
    <formula>Ordered_By__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesman Code</label>
    <type>Text</type>
</CustomField>