force-app/main/default/objects/Order__c/fields/SAP_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Reference_Number__c</fullName>
    <label>SAP Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>