force-app/main/default/objects/Order__c/fields/SAP_Response__c.field-meta.xml
<CustomField>
    <fullName>SAP_Response__c</fullName>
    <label>SAP Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>