force-app/main/default/objects/Order__c/fields/SAP_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Status__c</fullName>
    <label>SAP Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>