force-app/main/default/objects/Order__c/fields/Snapshot_Sum_of_Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Sum_of_Ordered_Quantity__c</fullName>
    <label>Snapshot Sum of Ordered Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>