force-app/main/default/objects/Order__c/fields/Sum_of_Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Ordered_Quantity__c</fullName>
    <label>Sum of Ordered Quantity</label>
    <summarizedField>Order_Line_Item__c.Ordered_Quantity__c</summarizedField>
    <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>