force-app/main/default/objects/Order__c/fields/SUper_Stockist__c.field-meta.xml
<CustomField>
    <fullName>SUper_Stockist__c</fullName>
    <formula>AccountId__r.Super_Stockist_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SUper Stockist</label>
    <type>Text</type>
</CustomField>