force-app/main/default/objects/Order__c/fields/Super_Stockist_Code__c.field-meta.xml
<CustomField>
    <fullName>Super_Stockist_Code__c</fullName>
    <formula>if( Super_Stockist_Name__c != NULL &amp;&amp;  Super_Stockist_Name__r.Record_type_Name__c = &apos;Super Stockist&apos;,
    Super_Stockist_Name__r.Code__c , AccountId__r.Super_Stockist_Name__r.Code__c
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Super Stockist Code</label>
    <type>Text</type>
</CustomField>