force-app/main/default/objects/Order__c/fields/Super_Stockist_Name__c.field-meta.xml
<CustomField>
    <fullName>Super_Stockist_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Super Stockist Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Super Stockist</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Super Stockist Name)</relationshipLabel>
    <relationshipName>SuperStockist</relationshipName>
    <type>Lookup</type>
</CustomField>