force-app/main/default/objects/Order__c/fields/Total_Crate__c.field-meta.xml
<CustomField>
    <fullName>Total_Crate__c</fullName>
    <label>Total Crate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>