force-app/main/default/objects/Order__c/fields/Total_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_GST__c</fullName>
    <formula>totalCGST__c + totalSGST__c + totalIGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>