force-app/main/default/objects/Order__c/fields/Total_Order_Value1__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Value1__c</fullName>
    <formula>Total_Order_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>