force-app/main/default/objects/Order__c/fields/totalCGST__c.field-meta.xml
<CustomField>
    <fullName>totalCGST__c</fullName>
    <label>Total CGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>