force-app/main/default/objects/Order__c/fields/totalIGST__c.field-meta.xml
<CustomField>
    <fullName>totalIGST__c</fullName>
    <label>Total IGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>