force-app/main/default/objects/Order__c/fields/totalSGST__c.field-meta.xml
<CustomField>
    <fullName>totalSGST__c</fullName>
    <label>Total SGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>