force-app/main/default/objects/Order__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Order</fullName>
            </value>
            <value>
                <fullName>Counter Order</fullName>
            </value>
            <value>
                <fullName>Under Super Stockist</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Bulk Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>