force-app/main/default/objects/Order__c/fields/Under_SS_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Under_SS_Distributor__c</fullName>
    <formula>Under_SS_Order__r.AccountId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Under SS Distributor</label>
    <type>Text</type>
</CustomField>