force-app/main/default/objects/Order__c/fields/Under_SS_Distributor_ID__c.field-meta.xml
<CustomField>
    <fullName>Under_SS_Distributor_ID__c</fullName>
    <description>This is used for backend code purpose</description>
    <formula>Under_SS_Order__r.AccountId__c</formula>
    <label>Under SS Distributor ID</label>
    <type>Text</type>
</CustomField>