force-app/main/default/objects/Order__c/fields/Under_SS_Order__c.field-meta.xml
<CustomField>
    <fullName>Under_SS_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Under SS Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>