force-app/main/default/objects/Order__c/fields/Visit_Task__c.field-meta.xml
<CustomField>
    <fullName>Visit_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Task</label>
    <referenceTo>Visit_Task__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>