force-app/main/default/objects/Order__c/recordTypes/Counter_Order.recordType-meta.xml
<RecordType>
    <fullName>Counter_Order</fullName>
    <active>true</active>
    <label>Counter Order</label>
</RecordType>