force-app/main/default/objects/Order__c/recordTypes/Primary_Order.recordType-meta.xml
<RecordType>
    <fullName>Primary_Order</fullName>
    <active>true</active>
    <label>Primary Order</label>
</RecordType>