force-app/main/default/objects/Order__c/recordTypes/Primary_Order_delivered.recordType-meta.xml
<RecordType>
    <fullName>Primary_Order_delivered</fullName>
    <active>true</active>
    <label>Primary Order delivered</label>
</RecordType>