force-app/main/default/objects/Order__c/recordTypes/Secondary_Order.recordType-meta.xml
<RecordType>
    <fullName>Secondary_Order</fullName>
    <active>true</active>
    <label>Secondary Order</label>
</RecordType>