force-app/main/default/objects/Order__c/recordTypes/Under_SS_Secondary_Order.recordType-meta.xml
<RecordType>
    <fullName>Under_SS_Secondary_Order</fullName>
    <active>true</active>
    <label>Under SS Secondary Order</label>
</RecordType>