force-app/main/default/objects/Order__c/validationRules/Prevent_owner_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_owner_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(OwnerId),
  $Profile.Name =&quot;DMS Partner Community Custom&quot;
)</errorConditionFormula>
    <errorMessage>You do not have permission to change the record owner. Contact your administrator.</errorMessage>
</ValidationRule>