force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EffectiveDate__c</columns>
    <columns>Account__c</columns>
    <columns>AccountId__c</columns>
    <columns>Ordered_By__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Order_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>System_Admin_Group</group>
    </sharedTo>
</ListView>