force-app/main/default/objects/Order__c/listViews/All_Counter_Orders.listView-meta.xml
<ListView>
    <fullName>All_Counter_Orders</fullName>
    <columns>NAME</columns>
    <columns>EffectiveDate__c</columns>
    <columns>Company__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Order_Value__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Counter_Order</value>
    </filters>
    <label>All Counter Orders</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>