force-app/main/default/objects/Order__c/listViews/All_Primary_Orders_For_UnderSS.listView-meta.xml
<ListView>
    <fullName>All_Primary_Orders_For_UnderSS</fullName>
    <columns>NAME</columns>
    <columns>EffectiveDate__c</columns>
    <columns>Status__c</columns>
    <columns>GRN_Status__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Order_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Under_SS_Order</value>
    </filters>
    <label>All Primary Orders - Under SS</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
        <group>System_Admin_Group</group>
    </sharedTo>
</ListView>