force-app/main/default/objects/Order__c/listViews/All_Secondary_Order.listView-meta.xml
<ListView>
    <fullName>All_Secondary_Order</fullName>
    <columns>NAME</columns>
    <columns>EffectiveDate__c</columns>
    <columns>Account__c</columns>
    <columns>Beat_Name__c</columns>
    <columns>Ordered_By__c</columns>
    <columns>Invoice_Created__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Order_Value__c</columns>
    <columns>AccountId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Secondary_Order</value>
    </filters>
    <label>All Secondary Order</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
        <group>System_Admin_Group</group>
    </sharedTo>
</ListView>