force-app/main/default/objects/Order__c/listViews/All_Secondary_Orders_Order_Placed.listView-meta.xml
<ListView>
    <fullName>All_Secondary_Orders_Order_Placed</fullName>
    <columns>NAME</columns>
    <columns>EffectiveDate__c</columns>
    <columns>Account__c</columns>
    <columns>Ordered_By__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Total_Order_Value__c</columns>
    <columns>AccountId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Order Placed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Order__c.Primary_Order,Order__c.Counter_Order</value>
    </filters>
    <label>All Secondary Orders (Order Placed )</label>
</ListView>